# rust_foundations

./: .gitignore  Cargo.toml  README.md
session 2 Threads & System Threads/: Cargo.toml  README.md
session 2 Threads & System Threads/2.11_deadlocks_panics_poisoning/src/: main.rs
session 2 Threads & System Threads/2.14_channels1/: README.md
session 2 Threads & System Threads/2.14_channels1/src/: main.rs
session 2 Threads & System Threads/2.15_worker_threads/: README.md
session 2 Threads & System Threads/2.15_worker_threads/src/: main.rs
session 2 Threads & System Threads/2.16_worker2_thread_pools/: README.md
session 2 Threads & System Threads/2.18_thrdprio/src/: main.rs
session 2 Threads & System Threads/2.19_rayon_iters/src/: main.rs
session 2 Threads & System Threads/2.20_rayon_scopes/src/: main.rs
session 2 Threads & System Threads/2.2_2.3_2.4_hello_threads/src/: main.rs
session 2 Threads & System Threads/2.7_scoped_threads/src/: main.rs
session 2 Threads & System Threads/2.8_atomic_threads/src/: main.rs
session3_AsyncAwait/: Cargo.toml
session3_AsyncAwait/3.10_shared_state_tokio/: Cargo.toml
session3_AsyncAwait/3.10_shared_state_tokio/src/: main.rs
session3_AsyncAwait/3.11_tokio_select/src/: main.rs
session3_AsyncAwait/3.12_recursion/: Cargo.toml  README.md
session3_AsyncAwait/3.12_recursion/src/: main.rs
session3_AsyncAwait/3.14_databases/: Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
session3_AsyncAwait/3.14_databases/src/: main.rs
session3_AsyncAwait/3.15_web_service/: Cargo.toml
session3_AsyncAwait/3.3_hello_tokio2/: Cargo.toml  README.md
session3_AsyncAwait/3.4_blocking_tasks/: Cargo.toml
session3_AsyncAwait/3.5_tokio_testing/: Cargo.toml
session3_AsyncAwait/3.7_fileio/: Cargo.toml
session3_AsyncAwait/3.8_restclient/: Cargo.toml
session3_AsyncAwait/3.8_tcpserver/: Cargo.toml
session3_AsyncAwait/3.9_async_channels_tokio/: Cargo.toml
session5_project/5.2_collector/: Cargo.toml  uuid
session5_project/5.3_server/: Cargo.toml  collection.db  collection.db-shm  collection.db-wal
(+66 files in other folders)
