[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_data = { path = "../5.1_shared_data"}
sysinfo = { version = "0.29.2", features = ["apple-app-store"] }
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
